Added Enviroment Label

--- a/src/main/java/nz/ac/massey/cs/TasksPage.html
+++ b/src/main/java/nz/ac/massey/cs/TasksPage.html
@@ -141,6 +141,9 @@
 				/></div>
 				<div><input type="submit" value="Add" /></div>
 			</form>
+			<hr>
+			Environment: <span id="enviro" wicket:id="enviro">
+			</span>
 	</div>
 
 		<div class="column" style="background-color:#bbb;">
