Started work on the import Export binary feature

--- a/src/main/java/nz/ac/massey/cs/TasksPage.html
+++ b/src/main/java/nz/ac/massey/cs/TasksPage.html
@@ -184,6 +184,10 @@
 			<a href="#" wicket:id="activeTasks">Active Tasks Filter </a>
 			<hr>
 			<a href="#" wicket:id="allTasks">All Tasks </a>
+			<hr>
+			<a href="#" wicket:id="exportbinary">Export Binary </a>
+			<hr>
+			<a href="#" wicket:id="importbinary">Import Binary </a>
 		</div>
 	</div>
 
